Clean readme.